force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__CitationCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CitationCount__c</fullName>
    <label>Citation Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CitationCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>