force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__JournalName__c.field-meta.xml
<CustomField>
    <fullName>ssot__JournalName__c</fullName>
    <label>Journal Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JournalName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>