force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__ListingPlatformType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ListingPlatformType__c</fullName>
    <label>Listing Platform Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ListingPlatformType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>