force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__PartyAuthorRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyAuthorRole__c</fullName>
    <label>Party Author Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyAuthorRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>