force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__PublicationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PublicationDate__c</fullName>
    <label>Publication Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PublicationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>