force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__PublicationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__PublicationIdentifier__c</fullName>
    <label>Publication Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PublicationIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>