force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__rel_1731659086894_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659086894_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPublication_PartyId_map_Party_I_rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyPublication_PartyId_map_Party_I_rel</relationshipLabel>
    <relationshipName>rel_1731659086894_end</relationshipName>
    <type>Lookup</type>
</CustomField>