force-app/main/default/objects/ssot__PartyPublication__dlm/fields/ssot__SummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SummaryText__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>